@@ -1,3 +1,8 @@
+2004-04-25  Rodrigo Moya <rodrigo@ximian.com>
+
+	* gui/e-day-view.c (e_day_view_add_event):
+	* gui/e-week-view.c (e_week_view_add_event): set the recurrence ID.
+
 2004-04-23  Rodrigo Moya <rodrigo@ximian.com>
 
 	* gui/e-calendar-view.c (e_calendar_view_delete_selected_occurrence):
